fixing build issues